data/usersCode/vcasda/question1/error.txt
/home/gauravghati/clash/data/usersCode/vcasda/question1/code1-1.cpp:1:1: error: ‘jhgjg’ does not name a type
 jhgjg jhgjhg hjgj
 ^~~~~
